<resources>
    <string name="app_name">Livraisou</string>
    <string name="login">Connexion</string>
    <string name="register">Inscription</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="order">Commander</string>
    <string name="mail">Adresse e-mail</string>
    <string name="password">Mot de passe</string>
    <string name="new_password">Nouveau Mot de passe</string>
    <string name="verif_password">Verification Mot de passe</string>
    <string name="redirect_register">Vous n\'avez pas de compte ? <u>Cliquez ici</u></string>
    <string name="redirect_login">Vous avez déjà un compte ? <u>Cliquez ici</u></string>
    <string name="forgotten_password"> <u>Mot de passe oublié?</u></string>
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="btn_redirect"><u>cliquez ici</u></string>
    <string name="btn_historic"><u>Historique des Recherches</u></string>
    <string name="btn_update"><u>Mettre a jour</u></string>
    <string name="btn_logOut">Deconnexion</string>
    <string name="order_final">Merci pour votre commande. \n Celle-ci est en cours de préparation</string>
    <string name="main_menu">Accueil</string>
    <string name="location">Adresse</string>
    <string name="full_name">Nom entier</string>
    <string name="account">Compte</string>
    <string name="past_orders">Historique des commandes</string>
    <string name="past_orders_u"><u>Historique des commandes</u></string>
    <string name="add">Ajouter au panier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_a_status">Poster un status</string>
    <string name="writing_title">Ecrivez un titre ici</string>
    <string name="put_content">Ecrivez votre post ici</string>
    <string name="postButton">Poster</string>

</resources>